Fixed the flashing scrollbar when closing a full sized section.

--- a/web/stylesheets/main.css
+++ b/web/stylesheets/main.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     background-color: #113;
+    overflow: hidden;
     font-family: 'Titillium Web', sans-serif;
     color: white;
 }
